# bossiq-astar-cli

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: astar.hpp
src/: main.cpp
